--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,7 +13,6 @@
     <title>PokéDom</title>
   </head>
   <body>
-    <body>
     <h1>PokéDom- gotta code 'em all!</h1>
     <main class="card-container"></main>
     <script type="module" src="/src/main.ts"></script>
