--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <h1>PokéDom- gotta code 'em all!</h1>
+    <input type="text" placeholder="Search" />
     <main class="card-container"></main>
     <script type="module" src="/src/main.ts"></script>
   </body>
