--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   </head>
   <body>
     <h1>PokéDom- gotta code 'em all!</h1>
-    <input type="text" placeholder="Search" />
+    <input type="text" placeholder="Name" />
+    <select name="Type" class="drop-down"></select>
     <main class="card-container"></main>
     <script type="module" src="/src/main.ts"></script>
   </body>
