created a option element for each type stored in the arr . And assigned value and text as type

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <h1>PokéDom- gotta code 'em all!</h1>
     <input type="text" placeholder="Name" />
-    <select name="Type" class="drop-down"></select>
+    <select name="Type" class="drop-down">
+      <option value="">Any</option>
+    </select>
     <main class="card-container"></main>
     <script type="module" src="/src/main.ts"></script>
   </body>
