--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>PokéDom- gotta code 'em all!</h1>
     <input type="text" placeholder="Name" />
     <select name="Type" class="drop-down">
-      <option value="">Any</option>
+      <option value="any">Any</option>
     </select>
     <main class="card-container"></main>
     <script type="module" src="/src/main.ts"></script>
